# fullstack-chatting

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  mainwindow.h  mainwindow.ui  rc.qrc
client/: CMakeLists.txt
client/res/style/: stylesheet.qss
client/src/: global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h
res/: head.icns  rc.qrc
server/: CMakeLists.txt
server/GateServer/: CMakeLists.txt  generate_proto.sh
server/GateServer/proto/: message.proto
server/GateServer/src/: CServer.cpp  CServer.h  ConfigMgr.cc  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  Singleton.h  VarifyGrpcClient.cc  VarifyGrpcClient.h  const.h  main.cpp  message.proto
server/VarifyServer/: package.json
src/: global.cpp  global.h  httpmgr.cpp  httpmgr.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  singleton.h
